# Beirus-sampler

./: AndroidManifest.xml  CMakeLists.txt  MainActivity.kt  README.md  SplashActivity.kt  WaveformView.kt  activity_main.xml  activity_splash.xml  build.gradle.kts  build.yml  build_termux.sh  gradle.properties  gradlew  native-lib.cpp  settings.gradle.kts  strings.xml
.github/workflows/: main.yml
